--- a/src/pages/indexdd.astro
+++ b/src/pages/indexdd.astro
@@ -1,90 +1,102 @@
 ---
-import { t, changeLanguage } from "i18next";
+import { changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
-import { localizePath } from "astro-i18next";
-import { Trans } from "astro-i18next/components";
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 // Component Imports
-import CallToAction from "../../components/CallToAction.astro";
-import Grid from "../../components/Grid.astro";
-import Hero from "../../components/Hero.astro";
-import Icon from "../../components/Icon.astro";
-import Pill from "../../components/Pill.astro";
-import PortfolioPreview from "../../components/PortfolioPreview.astro";
+import CallToAction from "../components/CallToAction.astro";
+import Grid from "../components/Grid.astro";
+import Hero from "../components/Hero.astro";
+import Icon from "../components/Icon.astro";
+import Pill from "../components/Pill.astro";
+import PortfolioPreview from "../components/PortfolioPreview.astro";
 // Page section components
-import ContactCTA from "../../components/ContactCTA.astro";
-import Skills from "../../components/Skills.astro";
+import ContactCTA from "../components/ContactCTA.astro";
+import Skills from "../components/Skills.astro";
 
-changeLanguage("it");
+changeLanguage("en");
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection("work_en"))
     .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-    .slice(0, 3);
+    .slice(0, 4);
 ---
+
 <BaseLayout>
 	<div class="stack gap-20 lg:gap-48">
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title={t("site.title")}
-					tagline={t("site.description")}
+					title="Hello, my name is Jeanine White"
+					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="windows" size="1.33em" /> Windows Lover</Pill>
-						<Pill><Icon icon="desktop-tower" size="1.33em" /> Helpdesk</Pill>
-						<Pill><Icon icon="palette" size="1.33em" /> {t("site.artist")}</Pill>
-						<Pill><Icon icon="sketch-logo" size="1.33em" /> Logo Designer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Computer"
+					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
 					width="480"
 					height="620"
-					src="/assets/portrait.webp"
+					src="/assets/portrait.jpg"
 				/>
 			</header>
 
 			<Skills />
-			
-			<div style="font-size:1.5em;text-align: center;">
-				<strong>{t("site.aboutredi")}</strong>
-				<br>
-				<Trans i18nKey="site.aboutredi2">
-				Check the <a href={localizePath("/about/")}>About Me</a> page!
-				</Trans>
-			</div>
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>{t("site.selectedwork")}</h3>
-					<p>{t("site.selectedworkd")}</p>
+					<h3>Selected Work</h3>
+					<p>Take a look below at some of my featured work for clients from the past few years.</p>
 				</header>
-			<div class="gallery">
-				<Grid variant="offset">
-					{
-						projects.map((project) => (
-							<li>
-								<PortfolioPreview project={project} />
-							</li>
-						))
-					}
-				</Grid>
-			</div>
+
+				<div class="gallery">
+					<Grid variant="offset">
+						{
+							projects.map((project) => (
+								<li>
+									<PortfolioPreview project={project} />
+								</li>
+							))
+						}
+					</Grid>
+				</div>
 
 				<div class="cta">
-					<CallToAction href={localizePath("/work/")}>
-						{t("site.selectedworkb")}
+					<CallToAction href="/work/">
+						View All
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
 				</div>
 			</section>
 
+			<section class="section with-background bg-variant">
+				<header class="section-header stack gap-2 lg:gap-4">
+					<h3>Mentions</h3>
+					<p>
+						I have been fortunate enough to recieve praise for my work in several publications. Take
+						a look below to learn more.
+					</p>
+				</header>
+
+				<div class="gallery">
+					<Grid variant="small">
+						{
+							['Medium', 'BuzzFeed', 'The Next Web', 'awwwards.', 'TechCrunch'].map((brand) => (
+								<li class="mention-card">
+									<p>{brand}</p>
+								</li>
+							))
+						}
+					</Grid>
+				</div>
+			</section>
 		</main>
 
 		<ContactCTA />
@@ -100,11 +112,7 @@ const projects = (await getCollection("work_en"))
 	}
 
 	.roles {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		gap: 0.5rem;
-		
+		display: none;
 	}
 
 	.hero img {
@@ -127,7 +135,6 @@ const projects = (await getCollection("work_en"))
 			margin-top: 0.5rem;
 			display: flex;
 			gap: 0.5rem;
-			justify-content: left;
 		}
 
 		.hero img {
