--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -11,7 +11,7 @@ import Icon from "../../components/Icon.astro";
 
 changeLanguage("it");
 
-const projects = (await getCollection("work_it")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 5);
+const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 5);
 ---
 
 <BaseLayout title={t( "work.myworkt")} description={t( "work.myworktd")}>
