--- a/src/pages/it/index.astro
+++ b/src/pages/it/index.astro
@@ -19,7 +19,7 @@ import Skills from "../../components/Skills.astro";
 changeLanguage("it");
 
 // Content Fetching: List four most recent work projects
-const projects = (await getCollection("work_en"))
+const projects = (await getCollection("work_it"))
     .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
     .slice(0, 3);
 ---
